[package]
name = "napi_sandbox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-compat = "0.2.4"
async-io = "2.3.3"
futures = "0.3.30"
# libuv = "2.9.0"
libuv = { path = "../../../alshdavid-forks/libuv-rs", features = ["sys"] }
# neon = { version = "=1.1.0-alpha.0" }
neon = { path = "../../../alshdavid-forks/neon/crates/neon", features = ["sys"]}
once_cell = "1.19.0"
smol = "2.0.0"
tokio = { version = "1.38.0", features = ["full"] }
